--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^5.12.15"
+    "fs": "0.0.1-security",
+    "mongoose": "^5.12.15",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
