--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "fs": "0.0.1-security",
+    "method-override": "^3.0.0",
     "mongoose": "^5.12.15"
   },
   "devDependencies": {
